Save workout plan